force-app/main/default/objects/Stg_Course__c.object
<CustomObject>
    <description>Staging object for Course Published and Course-All (i.e. course versions) from Callista.

This data in this object can be purged but due to the low volumes we retain it as an audit tool.</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Abbreviation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code_With_Version__c</fullName>
        <formula>Course_Code__c + (Version_Formula_Field__c)</formula>
        <label>Course Code With Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Course Unique Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <description>Course Type - whether it is published or unpublished course</description>
        <label>Course Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_FT__c</fullName>
        <label>Duration_FT</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Faculty Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Description__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIG_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Global immersion guarantee approved course.</description>
        <label>GIG Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GIG_Note__c</fullName>
        <description>Lists unitset titles that will invalidate this course from GIG selection.</description>
        <label>GIG Note</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <label>Job Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Description__c</fullName>
        <description>Description of the level code</description>
        <label>Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Code__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Managing Faculty Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Description__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Managing Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Award_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non-award course indicator (from Callista course_Type).</description>
        <label>Non Award Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Code__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Partner Faculty Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Faculty_Description__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Partner Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Credit Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Record Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Short Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation_Code__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Specialisation Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Level_Description__c</fullName>
        <label>Sub Level Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Level__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Sub Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teach_Out_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teach Out Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Duplicate__c</fullName>
        <description>Formula field to map to course_description__c</description>
        <formula>Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Duplicate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field created for getting the information from MIX.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Formula_Field__c</fullName>
        <description>Field created to get the value whenever the version field is not null and use in course code with version field</description>
        <formula>IF((Version__c) != null, &apos;_&apos; + (Version__c), (Version__c) )</formula>
        <label>Version Formula Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Field created to capture Course/Unit Set version</description>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Stg Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Job_Code__c</columns>
        <columns>Record_Status__c</columns>
        <columns>NAME</columns>
        <columns>Version__c</columns>
        <columns>Managing_Faculty_Code__c</columns>
        <columns>Specialisation_Code__c</columns>
        <columns>Sub_Level__c</columns>
        <columns>Title__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Duration_FT__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stg Course</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>